--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         display.textContent = "⚡ جاري تجهيز الإشارة...";
       }, 3000);
       setTimeout(() => {
-        display.textContent = "⚠️ يجب عليك شحن حساب Melbet";
+        display.textContent = "⚠️ لتفعيل البرنامج، يجب عليك شحن حساب Melbet بمبلغ 60 دينار تونسي";
       }, 6000);
     }
 
@@ -194,6 +194,5 @@
   </script>
 </body>
 </html>
-
 
 
