--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>صفحة محمد - Melbet</title>
+  <title>صفحة محمد - 1xBet</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
   <style>
     body {
@@ -37,9 +37,7 @@
       50% { box-shadow: 0 0 30px #0f0; }
       100% { box-shadow: 0 0 10px #0f0; }
     }
-    .section {
-      padding: 30px 20px;
-    }
+    .section { padding: 30px 20px; }
     table {
       margin: 0 auto;
       border-collapse: collapse;
@@ -109,9 +107,9 @@
 </head>
 <body>
   <div class="section">
-    <h1>🚀 إشارات محمد - اربح مع Melbet الآن</h1>
+    <h1>🚀 إشارات محمد - اربح مع 1xBet الآن</h1>
     <a class="button" href="https://t.me/Muhammad_Predictor_bot" target="_blank">✉️ تواصل مع محمد</a>
-    <a class="button" href="https://refpa3665.com/L?tag=d_4683910m_59701c_&site=4683910&ad=59701&r=registration" target="_blank">📝 سجل في Melbet</a>
+    <a class="button" href="https://reffpa.com/L?tag=d_4820077m_97c__[]general[]_d173602_l225906_adaptive_banner&site=4820077&ad=97&r=registration" target="_blank">📝 سجل في 1xBet</a>
     <button class="button button-green" onclick="openModal()">✅ احصل على إشارة</button>
     <div id="signal-display"></div>
     <div id="user-id"></div>
@@ -155,7 +153,7 @@
   <!-- Modal -->
   <div id="idModal" class="modal">
     <div class="modal-content">
-      <h2>أدخل معرف Melbet الخاص بك (10 أرقام)</h2>
+      <h2>أدخل معرف 1xBet الخاص بك (10 أرقام)</h2>
       <input type="text" id="melbetId" maxlength="10" placeholder="XXXXXXXXXX">
       <button class="button button-green" onclick="submitId()">تأكيد</button>
     </div>
@@ -174,14 +172,13 @@
       }
       document.getElementById("idModal").style.display = "none";
       document.getElementById("user-id").textContent = "✅ معرفك: " + id;
-
       const display = document.getElementById("signal-display");
       display.textContent = "⏳ جاري ربط البرنامج...";
       setTimeout(() => {
         display.textContent = "⚡ جاري تجهيز الإشارة...";
       }, 3000);
       setTimeout(() => {
-        display.textContent = "⚠️ لتفعيل البرنامج، يجب عليك شحن حساب Melbet بمبلغ 60 دينار تونسي";
+        display.textContent = "⚠️ لتفعيل البرنامج، يجب عليك شحن حساب 1xBet بمبلغ 20 دينار تونسي";
       }, 6000);
     }
 
